<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:hint="@string/enter_purpose"
        android:paddingBottom="@dimen/_20sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/purposeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="50"
            android:maxLines="2"
            android:padding="@dimen/_10sdp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:hint="@string/enter_amount"
        android:maxLines="1"
        android:paddingBottom="@dimen/_20sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="numberSigned"
            android:nextFocusDown="@id/save"
            android:padding="@dimen/_10sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_weight="1"
            android:text="@string/save"
            android:textColor="?attr/colorPrimary"
            app:rippleColor="?attr/colorPrimary"
            app:strokeColor="?attr/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textColor="@color/delete_button_bottom_sheet"
            android:visibility="gone"
            app:rippleColor="@color/delete_button_bottom_sheet"
            app:strokeColor="@color/delete_button_bottom_sheet"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/close"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_weight="1"
            android:text="@string/close"
            android:textColor="@color/close_button_bottom_sheet"
            app:rippleColor="@color/close_button_bottom_sheet"
            app:strokeColor="@color/close_button_bottom_sheet" />
    </LinearLayout>

</LinearLayout>